# SVGenDataset

./: README.md  formater.py  main.py  pyproject.toml  retriver.py
dataset/: instruct-svg.csv  svgrepo.csv  svgrepo_modified_reordered.csv
svgdataset/: descriptor.py  formater.py  lazyCaption.py  retriver.py
